[gd_scene load_steps=7 format=1]

[ext_resource path="res://scripts/menu/menu.gd" type="Script" id=1]
[ext_resource path="res://assets/menu/bg.png" type="Texture" id=2]
[ext_resource path="res://assets/menu/logo_ff.png" type="Texture" id=3]
[ext_resource path="res://themes/mainMenu.tres" type="Theme" id=4]
[ext_resource path="res://scenes/menu/saveFunctions.tscn" type="PackedScene" id=5]
[ext_resource path="res://themes/popup.tres" type="Theme" id=6]

[node name="Control" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="background" type="TextureFrame" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -150.0
margin/top = 0.0
margin/right = -150.0
margin/bottom = 0.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true
}

[node name="gameLogo" type="TextureFrame" parent="."]

anchor/left = 1
anchor/right = 1
rect/scale = Vector2( 0.6, 0.6 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 523.0
margin/top = 5.0
margin/right = -334.0
margin/bottom = 303.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="menu" type="VBoxContainer" parent="."]

anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 1
size_flags/vertical = 2
theme/theme = ExtResource( 4 )
margin/left = 290.0
margin/top = 40.0
margin/right = 0.0
margin/bottom = 250.0
alignment = 0
__meta__ = {
"_edit_lock_": true
}

[node name="newGameButton" type="Button" parent="menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 502.0
margin/bottom = 71.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Nouvelle partie"
flat = false

[node name="resumeButton" type="Button" parent="menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 71.0
margin/right = 502.0
margin/bottom = 142.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Reprendre le jeu"
flat = false

[node name="saveGameButton" type="Button" parent="menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 142.0
margin/right = 502.0
margin/bottom = 213.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Sauvegarder la partie"
flat = false

[node name="loadGameButton" type="Button" parent="menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 213.0
margin/right = 502.0
margin/bottom = 284.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Charger une partie"
flat = false

[node name="achievementsButton" type="Button" parent="menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 284.0
margin/right = 502.0
margin/bottom = 355.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Succ√®s"
flat = false

[node name="characterCustomizationButton" type="Button" parent="menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 355.0
margin/right = 502.0
margin/bottom = 426.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Personnalisation"
flat = false

[node name="settingsButton" type="Button" parent="menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 426.0
margin/right = 502.0
margin/bottom = 497.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Options"
flat = false

[node name="debugMenuButton" type="Button" parent="menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 497.0
margin/right = 502.0
margin/bottom = 568.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Debug"
flat = false

[node name="mainMenuButton" type="Button" parent="menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 568.0
margin/right = 502.0
margin/bottom = 639.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Revenir au menu principal"
flat = false

[node name="aboutButton" type="Button" parent="menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 639.0
margin/right = 502.0
margin/bottom = 710.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "A propos"
flat = false

[node name="exitGameButton" type="Button" parent="menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 710.0
margin/right = 502.0
margin/bottom = 790.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Quitter le jeu"
flat = false

[node name="saveFunctions" parent="." instance=ExtResource( 5 )]

[node name="confirmPopup_mainMenu" type="ConfirmationDialog" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 6 )
margin/left = 510.0
margin/top = 490.0
margin/right = 1410.0
margin/bottom = 590.0
popup/exclusive = false
window/title = ""
dialog/hide_on_ok = true

[node name="confirmPopup_exitGame" type="ConfirmationDialog" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 6 )
margin/left = 510.0
margin/top = 490.0
margin/right = 1410.0
margin/bottom = 590.0
popup/exclusive = false
window/title = ""
dialog/hide_on_ok = true

[connection signal="pressed" from="menu/newGameButton" to="." method="_on_newGameButton_pressed"]

[connection signal="pressed" from="menu/resumeButton" to="." method="_on_resumeButton_pressed"]

[connection signal="pressed" from="menu/saveGameButton" to="." method="_on_saveGameButton_pressed"]

[connection signal="pressed" from="menu/loadGameButton" to="." method="_on_loadGameButton_pressed"]

[connection signal="pressed" from="menu/achievementsButton" to="." method="_on_achievementsButton_pressed"]

[connection signal="pressed" from="menu/characterCustomizationButton" to="." method="_on_characterCustomizationButton_pressed"]

[connection signal="pressed" from="menu/settingsButton" to="." method="_on_settingsButton_pressed"]

[connection signal="pressed" from="menu/debugMenuButton" to="." method="_on_debugMenuButton_pressed"]

[connection signal="pressed" from="menu/mainMenuButton" to="." method="_on_mainMenuButton_pressed"]

[connection signal="pressed" from="menu/aboutButton" to="." method="_on_aboutButton_pressed"]

[connection signal="pressed" from="menu/exitGameButton" to="." method="_on_exitGameButton_pressed"]


